# analyst-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh
.streamlit/: config.toml
api/: client.py  main.py  schemas.py  session_store.py
auth/: auth.py
config/: settings.py  themes.py
core/: checkpoint.py  context.py  llm.py  logger.py  model_router.py  proactive.py  session.py  token_budget.py
db/: call_history.db
guardrails/: degradation.py  injection_guard.py  input_guard.py  output_guard.py
modes/: mode1_hypotheses.py  mode2_code.py  mode3_synthesis.py  mode4_stress.py  mode5_narrative.py
observability/: alerts.py  metrics.py  tracer.py
prompts/: mode1_v1.txt  mode2_v1.txt  mode3_v1.txt  mode4_v1.txt  mode5_v1.txt
rag/: ingest.py  retriever.py  store.py
tests/evals/: fixtures.py  last_run.json  llm_judge.py  run_evals.py  test_mode1.py  test_mode2.py  test_mode3.py  test_mode4.py  test_mode5.py
ui/: app.py
