[project]
name = "analyst-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.115.0",
    "groq>=1.4.0",
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.30.0",
]
